ui/src/app/login/components/setup/setup.component.scss
/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

.setup-container {
  min-height:100vh !important;
  max-height: 100vh;
}

.setup-card {
  max-height: 80vh;
  width:45%;
  overflow-y:auto;
}

.setup-header {
  margin-left:auto;
  margin-right:auto;
}

.setup-inline-content {
  width:500px;
  margin-left:auto;
  margin-right:auto;
  padding-bottom: 5%;
}

.installation-status-container {
  height:100%;
  max-height:100%;
  overflow-y:auto;
}

.sp-logo {
  display:block;
  width:300px;
  margin-left:auto;
  margin-right:auto;
  padding-top: 5%;
  padding-bottom: 5%;
}

.text-center {
  text-align:center;
}

.p-20 {
  padding: 20px;
}

.plr-20 {
  padding-left:20px;
  padding-right:20px;
}

